--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,7 +9,18 @@
         android:id="@+id/navigation_home"
         android:name="org.bizties.mypantry.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+
+        <action
+            android:id="@+id/action_homeFragment_to_addItemFragment"
+            app:destination="@id/navigation_add_item" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_add_item"
+        android:name="org.bizties.mypantry.ui.home.additem.AddItemFragment"
+        android:label="Add Item"
+        tools:layout="@layout/fragment_add_item" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
