--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,4 +25,15 @@
         android:textSize="20sp"
         android:visibility="gone"
         tools:text="No Items" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="add item"
+        android:tint="@android:color/white"
+        app:srcCompat="@android:drawable/ic_input_add" />
 </FrameLayout>
