--- a/app/src/main/res/layout/fragment_update_item.xml
+++ b/app/src/main/res/layout/fragment_update_item.xml
@@ -35,15 +35,11 @@
 
     <Button
         android:id="@+id/update_item_button"
+        style="@style/NormalButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Update"
         app:layout_constraintTop_toBottomOf="@id/label_text_view" />
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:layout_constraintTop_toBottomOf="@id/update_item_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
